@@ -99,19 +99,19 @@ sub init {
     $bot->hook(
         {
             to_me => 1,
-            text  => qr/^(?<command>list|forget)\s+(?<scope>my|all)\s+reminders/i,
+            text  => qr/^reminders\s+(?<command>list|forget)\s+(?<scope>mine|all)\b/i,
         },
         sub {
             my ( $bot, $in, $m ) = @_;
             my @reminders = @{ $bot->store->get('reminders') || [] };
 
             if ( lc( $m->{command} ) eq 'list' ) {
-                if ( lc( $m->{scope} ) eq 'my' ) {
+                if ( lc( $m->{scope} ) eq 'mine' ) {
                     my $me = lc( $in->{nick} );
                     @reminders = grep { $_->{author} eq $me } @reminders;
                 }
                 $bot->reply_to(
-                    'I have no reminders ' . ( ( lc( $m->{scope} ) eq 'my' ) ? 'from you ' : '' ) . 'on file.'
+                    'I have no reminders ' . ( ( lc( $m->{scope} ) eq 'mine' ) ? 'from you ' : '' ) . 'on file.'
                 ) unless (@reminders);
 
                 for ( my $i = 0; $i < @reminders; $i++ ) {
@@ -125,7 +125,7 @@ sub init {
                 }
             }
             else {
-                if ( lc( $m->{scope} ) eq 'my' ) {
+                if ( lc( $m->{scope} ) eq 'mine' ) {
                     my $me = lc( $in->{nick} );
                     @reminders = grep { $_->{author} ne $me } @reminders;
                 }
@@ -229,16 +229,16 @@ There are a couple of helper functions you can call as well.
 
 You can list all of your reminders or all reminders from anyone.
 
-    bot list my reminders
-    bot list all reminders
+    bot reminders list mine
+    bot reminders list all
 
 =head2 forget reminders
 
 You can tell the bot to forget all of your reminders or all reminders from
 everyone.
 
-    bot forget my reminders
-    bot forget all reminders
+    bot reminders forget mine
+    bot reminders forget all
 
 =head1 SEE ALSO
 
